--- a/src/samples/Wodsoft.ComBoost.Forum/Areas/Admin/Views/Shared/_DialogLayout.cshtml
+++ b/src/samples/Wodsoft.ComBoost.Forum/Areas/Admin/Views/Shared/_DialogLayout.cshtml
@@ -4,9 +4,9 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     <base target="_self" />
-    @System.Web.Optimization.Styles.Render("~/Content/bootstrap.css")
-    @System.Web.Optimization.Scripts.Render("~/bundles/jquery")
-    @System.Web.Optimization.Scripts.Render("~/Scripts/bootstrap.js")
+    <script src="~/lib/jquery/dist/jquery.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+    <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
 </head>
 <body>
     <div class="container-fluid">
