--- a/src/samples/Wodsoft.ComBoost.Forum/Views/_ViewImports.cshtml
+++ b/src/samples/Wodsoft.ComBoost.Forum/Views/_ViewImports.cshtml
@@ -1,2 +1,5 @@
 ﻿@using Wodsoft.ComBoost.Forum
+@using Wodsoft.ComBoost.Forum.Entity
+@using Wodsoft.ComBoost.Data
+@using System.ComponentModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
