--- a/src/samples/Wodsoft.ComBoost.Forum/Views/_ViewImports.cshtml
+++ b/src/samples/Wodsoft.ComBoost.Forum/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Wodsoft.ComBoost.Forum
 @using Wodsoft.ComBoost.Forum.Entity
 @using Wodsoft.ComBoost.Data
+@using Wodsoft.ComBoost.Data.Entity
 @using Wodsoft.ComBoost.Mvc;
 @using Wodsoft.ComBoost.Security;
 @using System.ComponentModel
