--- a/src/samples/Wodsoft.ComBoost.Forum/Views/_ViewImports.cshtml
+++ b/src/samples/Wodsoft.ComBoost.Forum/Views/_ViewImports.cshtml
@@ -5,4 +5,5 @@
 @using Wodsoft.ComBoost.Mvc;
 @using Wodsoft.ComBoost.Security;
 @using System.ComponentModel
+@using Microsoft.EntityFrameworkCore;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
