--- a/src/samples/Wodsoft.ComBoost.Forum/Views/Account/SignUp.cshtml
+++ b/src/samples/Wodsoft.ComBoost.Forum/Views/Account/SignUp.cshtml
@@ -23,15 +23,15 @@
         </div>
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-                <button type="button" onclick="submit()" class="btn btn-primary">注册</button>
+                <button type="button" onclick="submitForm()" class="btn btn-primary">注册</button>
                 已有账号？点击
-                <a href="@Html.Raw(Url.Action("SignIn"))">登录</a>。
+                <a href="@Html.Raw(Url.Action("SignIn", new { returnUrl = Context.Request.Query["returnUrl"].Count > 0 ? Context.Request.Query["returnUrl"][0] : Url.Action("Index", "Home") }))">登录</a>。
             </div>
         </div>
     </form>
 </div>
 <script type="text/javascript">
-    function submit() {
+    function submitForm() {
         if ($('#username').val().trim() == '') {
             alert('用户名不能为空。');
             return;
@@ -54,7 +54,7 @@
             data : $('#form').serialize(),
             type: 'POST',
             success: function(){
-                window.location = '@Html.Raw(Url.Action("Index", "Home"))';
+                window.location = '@Html.Raw(Context.Request.Query["returnUrl"].Count > 0 ? Context.Request.Query["returnUrl"][0] : Url.Action("Index", "Home"))';
             },
             error: function(xhr){
                 if (xhr.statusCode == '400'){
